--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
     <string name="app_name">lvysaur Workout Tracker</string>
     <string name="action_settings">Settings</string>
+
+    <string-array name="drawer_titles">
+        <item>Workouts</item>
+        <item>Graphs</item>
+        <item>Settings</item>
+        <item>Feedback</item>
+    </string-array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
