--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,12 @@
 <resources>
     <string name="app_name">lvysaur Workout Tracker</string>
+    <string name="activity_workout">Workout</string>
     <string name="action_settings">Settings</string>
     <string name="drawer_open">Open Drawer</string>
     <string name="drawer_close">Close Drawer</string>
 
     <string-array name="drawer_titles">
-        <item>Workouts</item>
+        <item>Workout History</item>
         <item>Graphs</item>
         <item>Settings</item>
         <item>Feedback</item>
